directory structure, disqus, about content, ...

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -3,22 +3,28 @@ de:
   - text: "&#xf409;"
     type: "mainpage"
     url: "/"
-  - text: "&#xf304;"
-    type: "about"
-    url: "/about/"
+  - text: "&#xf425;"
+    type: "archive"
+    url: "/archiv/"
   - text: "&#xf302;"
     type: "tags"
     url: "/tags/"
+  - text: "&#xf304;"
+    type: "about"
+    url: "/uebermich/"  
   - text: "&#xf455;"
     type: "imprint"
-    url: "/imprint/"
+    url: "/impressum/"
   aside:
   - headline: "Kurzprofil"
     description: "Diplom-Mathematiker und wissenschaftlicher Mitarbeiter an der Universit&auml;t M&uuml;nster. Verfolgt Computer- und naturwissenschaftliche Themen, kocht gerne, spielt Klavier. Benutzt Sublime Text 3 und Emacs."
     links:
     - symbol: "&#xf304;"
       text: "Michael Schaefer"
-      url: "/about/"
+      url: "/uebermich/"
+    - symbol: "&#xf410;"
+      text: "mail [at] michael [minus] schaefer [punkt] org"
+      url: ""
     - symbol: "&#xf427;"
       text: "&Ouml;ffentlicher GnuPG Schl&uuml;ssel"
       url: "/media/gpg-key-michaelschaefer.asc"
@@ -26,10 +32,10 @@ de:
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"
   - headline: "Sprache"
+    explanation: "Diese Internetseite ist in den folgenden Sprachen verf&uuml;gbar:"
+    selected: "aktuell ausgew&auml;hlt"
     text: "deutsch"
     url: "/"
-  - headline: "Tags"
-  - headline: "Archiv"
   noDescription: "Kein Beschreibungstext vorhanden"
 
 en:
@@ -37,12 +43,15 @@ en:
   - text: "&#xf409;"
     type: "mainpage"
     url: "/en/"
-  - text: "&#xf304;"
-    type: "about"
-    url: "/en/about/"
+  - text: "&#xf425;"
+    type: "archive"
+    url: "/en/archive/"
   - text: "&#xf302;"
     type: "tags"
     url: "/en/tags/"
+  - text: "&#xf304;"
+    type: "about"
+    url: "/en/about/"  
   - text: "&#xf455;"
     type: "imprint"
     url: "/en/imprint/"
@@ -53,6 +62,9 @@ en:
     - symbol: "&#xf304;"
       text: "Michael Schaefer"
       url: "/en/about/"
+    - symbol: "&#xf410;"
+      text: "mail [at] michael [minus] schaefer [dot] org"
+      url: ""
     - symbol: "&#xf427;"
       text: "GnuPG public key"
       url: "/media/gpg-key-michaelschaefer.asc"
@@ -60,8 +72,8 @@ en:
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"    
   - headline: "Language"
+    explanation: "This website is available in the following languages:"
+    selected: "currently selected"
     text: "english"
     url: "/en/"
-  - headline: "Tags"
-  - headline: "Archive"
   noDescription: "No description text available"
