layout simplification, new footer, content gets dark when side menu opens

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -1,18 +1,23 @@
 de:
   navigation:
   - text: "&#xf409;"
+    tooltip: "Hauptseite"
     type: "mainpage"
     url: "/"
   - text: "&#xf425;"
+    tooltip: "Archiv"
     type: "archive"
     url: "/archiv/"
   - text: "&#xf302;"
+    tooltip: "Tags"
     type: "tags"
     url: "/tags/"
   - text: "&#xf304;"
+    tooltip: "&Uuml;ber mich"
     type: "about"
     url: "/uebermich/"  
   - text: "&#xf455;"
+    tooltip: "Impressum"
     type: "imprint"
     url: "/impressum/"
   aside:
@@ -31,28 +36,34 @@ de:
     - symbol: "&#xf200;"
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"
-  - headline: "Sprache"
+  - headline: "Sprachen"
     explanation: "Diese Internetseite ist in den folgenden Sprachen verf&uuml;gbar:"
     selected: "aktuell ausgew&auml;hlt"
     text: "deutsch"
     url: "/"
+  menuTooltip: "Men&uuml;"
   noDescription: "Kein Beschreibungstext vorhanden"
 
 en:
   navigation:
   - text: "&#xf409;"
+    tooltip: "Mainpage"
     type: "mainpage"
     url: "/en/"
   - text: "&#xf425;"
+    tooltip: "Archive"
     type: "archive"
     url: "/en/archive/"
   - text: "&#xf302;"
+    tooltip: "Tags"
     type: "tags"
     url: "/en/tags/"
   - text: "&#xf304;"
+    tooltip: "About me"    
     type: "about"
     url: "/en/about/"  
   - text: "&#xf455;"
+    tooltip: "Imprint"
     type: "imprint"
     url: "/en/imprint/"
   aside:
@@ -71,9 +82,10 @@ en:
     - symbol: "&#xf200;"
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"    
-  - headline: "Language"
+  - headline: "Languages"
     explanation: "This website is available in the following languages:"
     selected: "currently selected"
     text: "english"
     url: "/en/"
+  menuTooltip: "Menu"
   noDescription: "No description text available"
