support for lychee galleries

--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,7 @@ authorized_locales: ["de", "en"]
 ftp_host: "m-schaefer.info"
 ftp_dir: "/blog"
 ftp_passive: false
+lychee:
+  url: http://localhost/lychee/
+  album_title_tag: h1
+  link_big_to: lychee
