--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -41,10 +41,10 @@ de:
     selected: "aktuell ausgew&auml;hlt"
     text: "deutsch"
     url: "/"
-  menuTooltip: "Men&uuml;"
-  noArticles: "Keine Artikel vorhanden"
-  noDescription: "Kein Beschreibungstext vorhanden"
-  noTags: "Keine Tags vorhanden"
+  no_articles: "Keine Artikel vorhanden"
+  no_description: "Kein Beschreibungstext vorhanden"
+  no_tags_at_all: "Keine Tags vorhanden"
+  no_tags_for_article: "keine"
 
 en:
   navigation:
@@ -89,7 +89,7 @@ en:
     selected: "currently selected"
     text: "english"
     url: "/en/"
-  menuTooltip: "Menu"
-  noArticles: "No articles available"
-  noDescription: "No description text available"
-  noTags: "No tags available"
+  no_articles: "No articles available"
+  no_description: "No description text available"
+  no_tags_at_all: "No tags available"
+  no_tags_for_article: "none"
