new banner, some cleanup

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -41,6 +41,7 @@ de:
     selected: "aktuell ausgew&auml;hlt"
     text: "deutsch"
     url: "/"
+  banner_description: "Einige Eindr&uuml;cke meiner letzten Reise nach Schottland"
   no_articles: "Keine Artikel vorhanden"
   no_description: "Kein Beschreibungstext vorhanden"
   no_tags_at_all: "Keine Tags vorhanden"
@@ -89,6 +90,7 @@ en:
     selected: "currently selected"
     text: "english"
     url: "/en/"
+  banner_description: "Some impressions of my last travel to Scotland"
   no_articles: "No articles available"
   no_description: "No description text available"
   no_tags_at_all: "No tags available"
