small adjustment in banner description

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -41,7 +41,7 @@ de:
     selected: "aktuell ausgew&auml;hlt"
     text: "deutsch"
     url: "/"
-  banner_description: "Einige Eindr&uuml;cke meiner letzten Reise nach Schottland"
+  banner_description: "Einige Eindr&uuml;cke meiner letzten Schottland-Reise"
   no_articles: "Keine Artikel vorhanden"
   no_description: "Kein Beschreibungstext vorhanden"
   no_tags_at_all: "Keine Tags vorhanden"
