header improvements, about page with short profile, text fixes

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -1,47 +1,33 @@
 de:
   navigation:
-  - text: "&#xf409;"
-    tooltip: "Hauptseite"
+  - text: "Hauptseite"
     type: "mainpage"
     url: "/"
-  - text: "&#xf425;"
-    tooltip: "Archiv"
+  - text: "Archiv"
     type: "archive"
     url: "/archiv/"
-  - text: "&#xf302;"
-    tooltip: "Tags"
+  - text: "Tags"
     type: "tags"
     url: "/tags/"
-  - text: "&#xf304;"
-    tooltip: "&Uuml;ber mich"
+  - text: "&Uuml;ber mich"
     type: "about"
-    url: "/uebermich/"  
-  - text: "&#xf455;"
-    tooltip: "Impressum"
+    url: "/uebermich/"
+  - text: "Impressum"
     type: "imprint"
     url: "/impressum/"
-  aside:
-  - headline: "Kurzprofil"
+  short_profile:
+    headline: "Kurzprofil"
     description: "Diplom-Mathematiker und wissenschaftlicher Mitarbeiter an der Universit&auml;t M&uuml;nster. Verfolgt Computer- und naturwissenschaftliche Themen, kocht gerne, spielt Klavier. Benutzt Sublime Text 3 und Emacs."
-    links:
-    - symbol: "&#xf304;"
-      text: "Michael Schaefer"
-      url: "/uebermich/"
+    links:    
     - symbol: "&#xf410;"
-      text: "mail [at] michael [minus] schaefer [punkt] org"
-      url: ""
+      text: "mail@michael-schaefer.org"
+      url: "mailto:mail@michael-schaefer.org"
     - symbol: "&#xf427;"
       text: "&Ouml;ffentlicher GnuPG Schl&uuml;ssel"
       url: "/media/gpg-key-michaelschaefer.asc"
     - symbol: "&#xf200;"
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"
-  - headline: "Sprachen"
-    explanation: "Diese Internetseite ist in den folgenden Sprachen verf&uuml;gbar:"
-    selected: "aktuell ausgew&auml;hlt"
-    text: "deutsch"
-    url: "/"
-  banner_description: "Einige Eindr&uuml;cke meiner letzten Schottland-Reise"
   no_articles: "Keine Artikel vorhanden"
   no_description: "Kein Beschreibungstext vorhanden"
   no_tags_at_all: "Keine Tags vorhanden"
@@ -49,48 +35,34 @@ de:
 
 en:
   navigation:
-  - text: "&#xf409;"
-    tooltip: "Mainpage"
+  - text: "Mainpage"
     type: "mainpage"
     url: "/en/"
-  - text: "&#xf425;"
-    tooltip: "Archive"
+  - text: "Archive"
     type: "archive"
     url: "/en/archive/"
-  - text: "&#xf302;"
-    tooltip: "Tags"
+  - text: "Tags"
     type: "tags"
     url: "/en/tags/"
-  - text: "&#xf304;"
-    tooltip: "About me"    
+  - text: "About me"    
     type: "about"
     url: "/en/about/"  
-  - text: "&#xf455;"
-    tooltip: "Imprint"
+  - text: "Imprint"
     type: "imprint"
     url: "/en/imprint/"
-  aside:
-  - headline: "Short profile"
+  short_profile:
+    headline: "Short profile"
     description: "Mathematician and scientific assistent at M&uuml;nster University. Follows computer and science related stuff, enjoys cooking and playing the piano. Uses Sublime Text 3 and Emacs."
-    links:
-    - symbol: "&#xf304;"
-      text: "Michael Schaefer"
-      url: "/en/about/"
+    links:    
     - symbol: "&#xf410;"
-      text: "mail [at] michael [minus] schaefer [dot] org"
-      url: ""
+      text: "mail@michael-schaefer.org"
+      url: "mailto:mail@michael-schaefer.org"
     - symbol: "&#xf427;"
       text: "GnuPG public key"
       url: "/media/gpg-key-michaelschaefer.asc"
     - symbol: "&#xf200;"
       text: "github.com/michaelschaefer"
-      url: "http://github.com/michaelschaefer"    
-  - headline: "Languages"
-    explanation: "This website is available in the following languages:"
-    selected: "currently selected"
-    text: "english"
-    url: "/en/"
-  banner_description: "Some impressions of my last travel to Scotland"
+      url: "http://github.com/michaelschaefer"
   no_articles: "No articles available"
   no_description: "No description text available"
   no_tags_at_all: "No tags available"
