--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,9 @@ markdown: redcarpet
 pygments: true
 default_locale: "de"
 authorized_locales: ["de", "en"]
+paginate: 2
+paginate_per_category: true
+default_category: "de"
 ftp_host: "m-schaefer.info"
 ftp_dir: "/blog"
 ftp_passive: false
