--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,22 @@
 exclude: [CNAME, deploy, michael-schaefer.org.sublime-project, michael-schaefer.org.sublime-workspace]
+
 name: www.michael-schaefer.org
-markdown: redcarpet
-pygments: true
 default_locale: "de"
 authorized_locales: ["de", "en"]
-paginate: 2
+
+markdown: redcarpet
+pygments: true
+
+permalink: /:categories/:year/:month/:title
+paginate: 5
+paginate_path: "/page:num"
 paginate_per_category: true
 default_category: "de"
+
 ftp_host: "michael-schaefer.org"
 ftp_dir: "/blog"
 ftp_passive: false
+
 lychee:
   url: "http://www.michael-schaefer.org/lychee/"
   album_title_tag: "h1"
