--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -32,6 +32,7 @@ de:
   no_description: "Kein Beschreibungstext vorhanden"
   no_tags_at_all: "Keine Tags vorhanden"
   no_tags_for_article: "keine"
+  type_article: "Artikel:"
 
 en:
   navigation:
@@ -67,3 +68,4 @@ en:
   no_description: "No description text available"
   no_tags_at_all: "No tags available"
   no_tags_for_article: "none"
+  type_article: "Article:"
