--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -28,6 +28,9 @@ de:
     - symbol: "&#xf200;"
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"
+    - symbol: "&#xf413;"
+      text: "RSS feed"
+      url: "/feed.xml"
   no_articles: "Keine Artikel vorhanden"
   no_description: "Kein Beschreibungstext vorhanden"
   no_tags_at_all: "Keine Tags vorhanden"
@@ -64,6 +67,9 @@ en:
     - symbol: "&#xf200;"
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"
+    - symbol: "&#xf413;"
+      text: "RSS feed"
+      url: "/en/feed.xml"
   no_articles: "No articles available"
   no_description: "No description text available"
   no_tags_at_all: "No tags available"
