fix feed lins in 'about' pages

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -29,8 +29,11 @@ de:
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"
     - symbol: "&#xf413;"
+      text: "Atom feed"
+      url: "/atom.xml"
+    - symbol: "&#xf413;"
       text: "RSS feed"
-      url: "/feed.xml"
+      url: "/rss.xml"
   no_articles: "Keine Artikel vorhanden"
   no_description: "Kein Beschreibungstext vorhanden"
   no_tags_at_all: "Keine Tags vorhanden"
@@ -68,8 +71,11 @@ en:
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"
     - symbol: "&#xf413;"
+      text: "Atom feed"
+      url: "/en/atom.xml"
+    - symbol: "&#xf413;"
       text: "RSS feed"
-      url: "/en/feed.xml"
+      url: "/en/rss.xml"
   no_articles: "No articles available"
   no_description: "No description text available"
   no_tags_at_all: "No tags available"
