--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -9,9 +9,9 @@ de:
   - text: "Tags"
     type: "tags"
     url: "/tags/"
-  - text: "&Uuml;ber mich"
+  - text: "Biographie"
     type: "about"
-    url: "/uebermich/"
+    url: "/biographie/"
   - text: "Impressum"
     type: "imprint"
     url: "/impressum/"  
@@ -34,10 +34,11 @@ de:
     - symbol: "&#xf413;"
       text: "RSS feed"
       url: "/rss.xml"
+  articles: "Artikel"
   no_articles: "Keine Artikel vorhanden"
   no_description: "Kein Beschreibungstext vorhanden"
   no_tags_at_all: "Keine Tags vorhanden"
-  no_tags_for_article: "keine"
+  no_tags_for_article: "keine"  
   type_article: "Artikel:"
 
 en:
@@ -51,9 +52,9 @@ en:
   - text: "Tags"
     type: "tags"
     url: "/en/tags/"
-  - text: "About me"    
+  - text: "Biography"    
     type: "about"
-    url: "/en/about/"  
+    url: "/en/biography/"  
   - text: "Imprint"
     type: "imprint"
     url: "/en/imprint/"
@@ -76,6 +77,7 @@ en:
     - symbol: "&#xf413;"
       text: "RSS feed"
       url: "/en/rss.xml"
+  articles: "article(s)"
   no_articles: "No articles available"
   no_description: "No description text available"
   no_tags_at_all: "No tags available"
