design is responsive now :-)

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -43,7 +43,7 @@ de:
     no_tags_at_all: "Keine Tags vorhanden"
     no_tags_for_article: "keine"  
     readEntireArticle: "ganzen Artikel lesen"
-    select_a_month: "w&auml;hlen Sie einen Monat aus"
+    select_a_month: "einen Monat ausw&auml;hlen"
     type_article: "Artikel"
 
 en:
