--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,10 @@ authorized_locales: ["de", "en"]
 markdown: redcarpet
 pygments: true
 
+ftp_host: "michael-schaefer.org"
+ftp_dir: "/blog"
+ftp_passive: false
+
 permalink: /:categories/:year/:month/:title
 paginate: 5
 paginate_path: "/page:num"
