replaced genericon html entities by real characters

--- a/_data/i18n.yml
+++ b/_data/i18n.yml
@@ -9,19 +9,19 @@ de:
     headline: "Kurzprofil"
     description: "Diplom-Mathematiker und wissenschaftlicher Mitarbeiter an der Universit&auml;t M&uuml;nster. Verfolgt schwerpunktm&auml;&szlig;ig Computer- und naturwissenschaftliche Themen, kocht gerne, spielt Klavier. Benutzt Sublime Text 3 und Emacs."
     links:    
-    - symbol: "&#xf410;"
+    - symbol: ""
       text: "mail@michael-schaefer.org"
       url: "mailto:mail@michael-schaefer.org"
-    - symbol: "&#xf427;"
+    - symbol: ""
       text: "&Ouml;ffentlicher GnuPG Schl&uuml;ssel"
       url: "/media/gpg-key-michaelschaefer.asc"
-    - symbol: "&#xf200;"
+    - symbol: ""
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"
-    - symbol: "&#xf413;"
+    - symbol: ""
       text: "Atom feed"
       url: "/atom.xml"
-    - symbol: "&#xf413;"
+    - symbol: ""
       text: "RSS feed"
       url: "/rss.xml"
     strings:
@@ -71,19 +71,19 @@ en:
     headline: "Short profile"
     description: "Mathematician and scientific assistent at M&uuml;nster University. Has a focus on computer and science related stuff, enjoys cooking and playing the piano. Uses Sublime Text 3 and Emacs."
     links:    
-    - symbol: "&#xf410;"
+    - symbol: ""
       text: "mail@michael-schaefer.org"
       url: "mailto:mail@michael-schaefer.org"
-    - symbol: "&#xf427;"
+    - symbol: ""
       text: "GnuPG public key"
       url: "/media/gpg-key-michaelschaefer.asc"
-    - symbol: "&#xf200;"
+    - symbol: ""
       text: "github.com/michaelschaefer"
       url: "http://github.com/michaelschaefer"
-    - symbol: "&#xf413;"
+    - symbol: ""
       text: "Atom feed"
       url: "/en/atom.xml"
-    - symbol: "&#xf413;"
+    - symbol: ""
       text: "RSS feed"
       url: "/en/rss.xml"
     strings:
