--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,8 @@
 exclude: [CNAME, deploy, michael-schaefer.org.sublime-project, michael-schaefer.org.sublime-workspace]
+gems: ['jekyll-lunr-js-search']
+
+lunr_search:
+  excludes: [ index.html, /archiv, /suche, /en/index.html, /en/archive, /en/search ]
 
 name: www.michael-schaefer.org
 url: http://www.michael-schaefer.org
